Clean up IntelliJ warnings from update to Java 21 (#972)