@@ -92,13 +92,13 @@ public class Territory {
         if (forceObjects.size() > 1) {
             // Combine same name Forces if they got split
             int totalStrength = forceObjects.stream().mapToInt(Force::getStrength).sum();
-            String factionName = forceObjects.get(0).getFactionName();
+            String factionName = forceObjects.getFirst().getFactionName();
             forces.removeAll(forceObjects);
             if (totalStrength > 0)
                 forces.add(new Force(name, totalStrength, factionName));
-        } else if (forceObjects.size() == 1 && forceObjects.get(0).getStrength() == 0) {
+        } else if (forceObjects.size() == 1 && forceObjects.getFirst().getStrength() == 0) {
             // Remove 0 strength Force
-            forces.remove(forceObjects.get(0));
+            forces.remove(forceObjects.getFirst());
         }
         return forces.stream().filter(force -> force.getName().equals(name)).findFirst().orElse(new Force(name, 0));
     }
