@@ -56,7 +56,7 @@ public class EcazFaction extends Faction {
         Collections.shuffle(ambassadorPool);
 
         for (int i = 0; i < 5; i++) {
-            ambassadorSupply.add(ambassadorPool.remove(0));
+            ambassadorSupply.add(ambassadorPool.removeFirst());
         }
         ambassadorSupply.add("Ecaz");
     }
