@@ -148,7 +148,7 @@ class EmperorFactionTest extends FactionTestTemplate {
         assertEquals(8, faction.getSpice());
         assertFalse(faction.hasTreacheryCard("Kulon"));
         assertEquals(Emojis.EMPEROR + " paid 2 " + Emojis.SPICE + " to discard Kulon (Kaitain High Threshold ability)",
-                turnSummary.getMessages().get(0)
+                turnSummary.getMessages().getFirst()
         );
     }
 
